# duckstation

./: CMakeLists.txt
dep/: CMakeLists.txt
dep/fast_float/include/fast_float/: float_common.h
dep/imgui/include/: imgui_freetype.h  imgui_internal.h
dep/imgui/src/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_freetype.cpp  imgui_stdlib.cpp  imgui_tables.cpp  imgui_widgets.cpp
dep/lzma/include/: XzEnc.h
dep/reshadefx/include/: effect_codegen.hpp  effect_expression.hpp  effect_lexer.hpp  effect_module.hpp  effect_parser.hpp  effect_preprocessor.hpp  effect_symbol_table.hpp
dep/reshadefx/src/: effect_codegen_glsl.cpp  effect_codegen_hlsl.cpp  effect_codegen_spirv.cpp  effect_expression.cpp  effect_lexer.cpp  effect_parser_exp.cpp  effect_parser_stmt.cpp  effect_preprocessor.cpp  effect_symbol_table.cpp
src/: CMakeLists.txt
src/common/: CMakeLists.txt  binary_reader_writer.cpp  error.cpp  pch.h
src/common-tests/: CMakeLists.txt
src/core/: CMakeLists.txt  achievements.cpp  analog_controller.cpp  analog_joystick.cpp  cdrom.cpp  cheats.cpp  dma.cpp  fullscreen_ui.cpp  game_database.cpp  gpu.cpp  gpu_backend.cpp  gpu_hw.cpp  gpu_hw_texture_cache.cpp  gpu_thread.cpp  gte.cpp  hotkeys.cpp  imgui_overlays.cpp  mdec.cpp  negcon_rumble.cpp  spu.cpp  system.cpp  timers.cpp
src/duckstation-mini/: CMakeLists.txt  mini_host.cpp
src/duckstation-qt/: CMakeLists.txt
src/duckstation-regtest/: CMakeLists.txt
src/scmversion/: CMakeLists.txt
src/updater/: CMakeLists.txt
src/util/: CMakeLists.txt  cd_image_chd.cpp  cd_image_cue.cpp  compress_helpers.cpp  imgui_animated.h  imgui_fullscreen.cpp  imgui_fullscreen.h  imgui_manager.cpp  ini_settings_interface.h  media_capture.cpp  postprocessing.cpp  postprocessing_shader_fx.cpp  postprocessing_shader_fx.h
